# toy_trx_engine

./: .gitignore  Cargo.toml  README.md
src/: accounts.rs  lib.rs  main-sync.rs  main.rs  processor.rs
src/transactions/: chargeback.rs  deposit.rs  dispute.rs  mod.rs  resolve.rs  withdrawal.rs
tests/: gen_tran_file.jl  input.rs  scenarios.rs
tests/samples/: i_amt_formats.csv  i_comments.csv  i_no_headers.csv  i_ooo.csv  i_spaces_tabs.csv  s_dep_dis_res_chb.csv  s_dep_dis_with_chb.csv  s_dep_dis_with_res.csv  s_dep_with.csv
