[package]
name = "toy_trx_engine"
version = "0.1.0"
edition = "2021"
authors = ["gwierzchowski <gwierzchowski@wp.pl>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
argh = "0.1"
async-std = {version = "1.10", features = ["attributes"]}
async-trait = "0.1"
csv-async = {version = "1.2", features = ["with_serde"]}
enum_dispatch = "0.3"
futures = "0.3"
rust_decimal = "1"
serde = { version = "1", features = ["derive"]}

[dev-dependencies]
rust_decimal_macros = "1"
